--- a/index.html
+++ b/index.html
@@ -2,230 +2,314 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Bullpen Tracker Pro</title>
+<title>Bullpen Tracker Elite</title>
+
 <style>
-body { font-family: Arial; background:#020617; color:white; text-align:center; margin:0; padding:0;}
-h1,h2,h3{margin:5px;}
-canvas{border-radius:12px; background:#0f172a; margin:10px auto; display:block;}
-button, select, input{padding:8px;margin:5px;border-radius:8px;border:none;font-size:14px;}
-button{background:#2563eb;color:white;cursor:pointer;}
-#app{display:none; max-width:350px;margin:auto;}
+body {
+  font-family: Arial;
+  background: #0f172a;
+  color: white;
+  text-align: center;
+}
+
+h1 { margin-top: 10px; }
+
+canvas {
+  border: 2px solid white;
+  border-radius: 10px;
+  background: #1e293b;
+  margin: 10px;
+}
+
+button, select, input {
+  padding: 6px;
+  margin: 5px;
+  border-radius: 6px;
+  border: none;
+}
+
+button { background: #2563eb; color: white; }
+
+.panel { margin-top: 10px; }
+
+#app { display:none; }
 </style>
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#020617">
-<meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 
 <body>
 
 <!-- LOGIN -->
 <div id="login">
-<h2>Login</h2>
-<input id="email" type="email" placeholder="Enter email">
-<br>
-<input id="password" type="password" placeholder="Password">
-<br>
-<button onclick="login()">Login</button>
-<button onclick="signup()">Sign Up</button>
+  <h2>Login</h2>
+  <input id="username" placeholder="Enter name">
+  <br>
+  <button onclick="login()">Enter</button>
 </div>
 
 <!-- APP -->
 <div id="app">
-<h1>Bullpen Tracker Pro</h1>
+
+<h1>Bullpen Tracker Elite</h1>
 <div id="userDisplay"></div>
 
-<input id="newPitcher" placeholder="Add pitcher">
-<button onclick="addPitcher()">Add</button>
-<select id="pitcherSelect"></select>
-<button onclick="deletePitcher()">Delete</button>
+<!-- PITCHERS -->
+<div class="panel">
+  <input id="newPitcher" placeholder="Add pitcher">
+  <button onclick="addPitcher()">Add</button>
 
-<br>
-
-<select id="pitchType">
-<option>Four-Seam</option>
-<option>Two-Seam</option>
-<option>Changeup</option>
-<option>Slider</option>
-<option>Curveball</option>
-</select>
-
-<select id="viewMode">
-<option value="all">All Pitches</option>
-<option value="pitch">Selected Pitch</option>
-<option value="team">Entire Staff</option>
-</select>
-
-<h2>Tap to Record Pitch</h2>
-<canvas id="zone" width="320" height="420"></canvas>
-
-<h2>Heat Map</h2>
-<canvas id="heat" width="320" height="420"></canvas>
-
-<h3>Stats</h3>
-<div id="stats"></div>
-<button onclick="exportCSV()">Export CSV</button>
+  <select id="pitcherSelect"></select>
+  <button onclick="deletePitcher()">Delete</button>
 </div>
 
-<!-- Firebase Scripts -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+<!-- OPTIONS -->
+<div class="panel">
+  <select id="pitchType">
+    <option>Four-Seam</option>
+    <option>Two-Seam</option>
+    <option>Changeup</option>
+    <option>Slider</option>
+    <option>Curveball</option>
+  </select>
+
+  <select id="viewMode">
+    <option value="all">All Pitches</option>
+    <option value="pitch">Selected Pitch</option>
+    <option value="team">Entire Staff</option>
+  </select>
+</div>
+
+<!-- CANVAS -->
+<canvas id="zone" width="300" height="400"></canvas>
+<canvas id="heat" width="300" height="400"></canvas>
+
+<!-- STATS -->
+<div class="panel">
+  <h3>Statistics</h3>
+  <div id="stats"></div>
+</div>
+
+<!-- CHARTS -->
+<div class="panel">
+  <h3>Charts</h3>
+  <canvas id="chart" width="300" height="200"></canvas>
+</div>
+
+<!-- EXPORT -->
+<button onclick="exportCSV()">Export CSV</button>
+
+</div>
 
 <script>
-// --- FIREBASE CONFIG ---
-const firebaseConfig = {
-  apiKey: "AIzaSyATMceL9OwutTlZYbBzeXa02KCUJawaoUw",
-  authDomain: "bullpen-tracker.firebaseapp.com",
-  projectId: "bullpen-tracker",
-  storageBucket: "bullpen-tracker.firebasestorage.app",
-  messagingSenderId: "370897827412",
-  appId: "1:370897827412:web:847c7475fe0c8f7b105fc1"
-};
-firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
-const db = firebase.firestore();
-
-// --- GLOBALS ---
-let user = null;
+let user = "";
 let data = {};
 
-// --- LOGIN/SIGNUP ---
-function signup(){
-  const email=document.getElementById("email").value;
-  const password=document.getElementById("password").value;
-  auth.createUserWithEmailAndPassword(email,password)
-  .then(cred=>login())
-  .catch(e=>alert(e.message));
-}
-function login(){
-  const email=document.getElementById("email").value;
-  const password=document.getElementById("password").value;
-  auth.signInWithEmailAndPassword(email,password)
-  .then(cred=>initApp(cred.user))
-  .catch(e=>alert(e.message));
-}
+const zone = document.getElementById("zone");
+const ctx = zone.getContext("2d");
 
-// --- INIT APP ---
-function initApp(u){
-  user=u;
-  document.getElementById("login").style.display="none";
-  document.getElementById("app").style.display="block";
-  document.getElementById("userDisplay").innerText="User: "+u.email;
+const heat = document.getElementById("heat");
+const heatCtx = heat.getContext("2d");
+
+const chart = document.getElementById("chart");
+const chartCtx = chart.getContext("2d");
+
+// LOGIN SYSTEM
+function login() {
+  user = document.getElementById("username").value;
+  if (!user) return alert("Enter name");
+
+  document.getElementById("login").style.display = "none";
+  document.getElementById("app").style.display = "block";
+  document.getElementById("userDisplay").innerText = "User: " + user;
+
   loadData();
+  updatePitchers();
+  drawZone();
+  drawHeat();
+  updateStats();
+  drawChart();
 }
 
-// --- LOAD / SAVE DATA ---
-function loadData(){
-  db.collection("users").doc(user.uid).get().then(doc=>{
-    if(doc.exists){ data=doc.data().data||{}; }
-    else{ data={}; }
-    updatePitchers();
-    drawZone();
-    drawHeat();
-    updateStats();
-  });
-}
-function saveData(){
-  db.collection("users").doc(user.uid).set({data});
+// STORAGE PER USER
+function saveData() {
+  localStorage.setItem("bullpen_" + user, JSON.stringify(data));
 }
 
-// --- PITCHERS ---
-function addPitcher(){
-  const name=document.getElementById("newPitcher").value.trim();
-  if(!name) return;
-  if(!data[name]) data[name]=[];
+function loadData() {
+  const saved = localStorage.getItem("bullpen_" + user);
+  data = saved ? JSON.parse(saved) : {};
+}
+
+// PITCHERS
+function addPitcher() {
+  const name = document.getElementById("newPitcher").value;
+  if (!name) return;
+
+  if (!data[name]) data[name] = [];
   saveData();
   updatePitchers();
-  document.getElementById("newPitcher").value="";
 }
-function deletePitcher(){
-  const name=document.getElementById("pitcherSelect").value;
+
+function deletePitcher() {
+  const name = document.getElementById("pitcherSelect").value;
   delete data[name];
   saveData();
   updatePitchers();
 }
-function updatePitchers(){
-  const select=document.getElementById("pitcherSelect");
-  select.innerHTML="";
-  for(let p in data){
-    let opt=document.createElement("option");
-    opt.value=p; opt.textContent=p;
+
+function updatePitchers() {
+  const select = document.getElementById("pitcherSelect");
+  select.innerHTML = "";
+
+  for (let p in data) {
+    let opt = document.createElement("option");
+    opt.value = p;
+    opt.textContent = p;
     select.appendChild(opt);
   }
 }
 
-// --- DRAW STRIKE ZONE ---
-const zone=document.getElementById("zone");
-const ctx=zone.getContext("2d");
-function drawZone(){
-  ctx.clearRect(0,0,320,420);
-  ctx.strokeStyle="white"; ctx.lineWidth=2;
-  ctx.strokeRect(80,100,160,200);
-  for(let i=1;i<3;i++){
-    ctx.beginPath();
-    ctx.moveTo(80+i*53,100); ctx.lineTo(80+i*53,300); ctx.stroke();
-    ctx.beginPath();
-    ctx.moveTo(80,100+i*66); ctx.lineTo(240,100+i*66); ctx.stroke();
-  }
+// DRAW ZONE
+function drawZone() {
+  ctx.clearRect(0,0,300,400);
+  ctx.strokeStyle = "white";
+  ctx.strokeRect(75,100,150,200);
 }
 
-// --- RECORD PITCH ---
-zone.addEventListener("click",function(e){
-  const pitcher=document.getElementById("pitcherSelect").value;
-  if(!pitcher) return alert("Select pitcher");
-  const rect=zone.getBoundingClientRect();
-  const x=e.clientX-rect.left;
-  const y=e.clientY-rect.top;
-  const pitch={x,y,type:document.getElementById("pitchType").value,date:new Date().toLocaleDateString()};
+// INPUT
+zone.addEventListener("click", function(e){
+  const pitcher = document.getElementById("pitcherSelect").value;
+  if (!pitcher) return alert("Select pitcher");
+
+  const rect = zone.getBoundingClientRect();
+  const x = e.clientX - rect.left;
+  const y = e.clientY - rect.top;
+
+  const pitch = {
+    x,y,
+    type: document.getElementById("pitchType").value,
+    date: new Date().toLocaleDateString()
+  };
+
   data[pitcher].push(pitch);
   saveData();
-  drawZone();
-  ctx.fillStyle="yellow"; ctx.beginPath(); ctx.arc(x,y,4,0,Math.PI*2); ctx.fill();
-  drawHeat(); updateStats();
+
+  drawHeat();
+  updateStats();
+  drawChart();
 });
 
-// --- HEATMAP ---
-const heat=document.getElementById("heat"); const heatCtx=heat.getContext("2d");
-function drawHeat(){
-  heatCtx.clearRect(0,0,320,420);
-  heatCtx.strokeStyle="white"; heatCtx.strokeRect(80,100,160,200);
-  const mode=document.getElementById("viewMode").value;
-  const pitcher=document.getElementById("pitcherSelect").value;
-  const pitchType=document.getElementById("pitchType").value;
-  let pitches=[];
-  if(mode==="team"){ for(let p in data)pitches=pitches.concat(data[p]); }
-  else{ pitches=data[pitcher]||[]; if(mode==="pitch") pitches=pitches.filter(p=>p.type===pitchType);}
-  pitches.forEach(p=>{
-    let grd=heatCtx.createRadialGradient(p.x,p.y,2,p.x,p.y,20);
-    grd.addColorStop(0,"rgba(255,0,0,0.6)");
-    grd.addColorStop(1,"rgba(255,0,0,0)");
-    heatCtx.fillStyle=grd; heatCtx.beginPath(); heatCtx.arc(p.x,p.y,20,0,Math.PI*2); heatCtx.fill();
+// HEATMAP
+function drawHeat() {
+  heatCtx.clearRect(0,0,300,400);
+  heatCtx.strokeStyle = "white";
+  heatCtx.strokeRect(75,100,150,200);
+
+  const mode = document.getElementById("viewMode").value;
+  const pitcher = document.getElementById("pitcherSelect").value;
+  const pitchType = document.getElementById("pitchType").value;
+
+  let pitches = [];
+
+  if (mode === "team") {
+    for (let p in data) pitches = pitches.concat(data[p]);
+  } else {
+    pitches = data[pitcher] || [];
+    if (mode === "pitch") {
+      pitches = pitches.filter(p => p.type === pitchType);
+    }
+  }
+
+  pitches.forEach(p => {
+    heatCtx.fillStyle = "rgba(255,0,0,0.35)";
+    heatCtx.beginPath();
+    heatCtx.arc(p.x,p.y,6,0,Math.PI*2);
+    heatCtx.fill();
   });
 }
 
-// --- STATS ---
-function updateStats(){
-  const pitcher=document.getElementById("pitcherSelect").value;
-  if(!pitcher||!data[pitcher]) return;
-  const pitches=data[pitcher];
-  let strikes=0; pitches.forEach(p=>{ if(p.x>=80&&p.x<=240&&p.y>=100&&p.y<=300) strikes++; });
-  let percent=((strikes/pitches.length)*100).toFixed(1);
-  let daily={}; pitches.forEach(p=>{ daily[p.date]=(daily[p.date]||0)+1; });
-  let dailyText=""; for(let d in daily){ dailyText+=`${d}: ${daily[d]}<br>`; }
-  document.getElementById("stats").innerHTML=`Total Pitches: ${pitches.length}<br>Strike %: ${percent}%<br><b>Daily:</b><br>${dailyText}`;
+// STATS
+function updateStats() {
+  const pitcher = document.getElementById("pitcherSelect").value;
+  if (!pitcher || !data[pitcher]) return;
+
+  const pitches = data[pitcher];
+
+  let strikes = 0;
+  let daily = {};
+
+  pitches.forEach(p => {
+    if (p.x>=75 && p.x<=225 && p.y>=100 && p.y<=300) strikes++;
+
+    daily[p.date] = (daily[p.date] || 0) + 1;
+  });
+
+  const percent = ((strikes/pitches.length)*100).toFixed(1);
+
+  let text = `
+  Total: ${pitches.length} <br>
+  Strike %: ${percent}% <br><br>
+  <b>Daily Pitch Count</b><br>
+  `;
+
+  for (let d in daily) {
+    text += `${d}: ${daily[d]}<br>`;
+  }
+
+  document.getElementById("stats").innerHTML = text;
 }
 
-// --- EXPORT CSV ---
-function exportCSV(){
-  let csv="Pitcher,Type,X,Y,Date\n";
-  for(let p in data){ data[p].forEach(row=>{ csv+=`${p},${row.type},${row.x},${row.y},${row.date}\n`; }); }
-  let blob=new Blob([csv],{type:'text/csv'}); let a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="bullpen.csv"; a.click();
+// CHART
+function drawChart() {
+  chartCtx.clearRect(0,0,300,200);
+
+  const pitcher = document.getElementById("pitcherSelect").value;
+  if (!pitcher) return;
+
+  let counts = {};
+
+  data[pitcher].forEach(p => {
+    counts[p.type] = (counts[p.type] || 0) + 1;
+  });
+
+  let i = 0;
+  for (let type in counts) {
+    const height = counts[type] * 5;
+    chartCtx.fillStyle = "cyan";
+    chartCtx.fillRect(20 + i*50, 200-height, 30, height);
+
+    chartCtx.fillStyle = "white";
+    chartCtx.fillText(type, 20 + i*50, 190);
+
+    i++;
+  }
 }
 
-// --- LISTENERS ---
-document.getElementById("pitcherSelect").addEventListener("change",()=>{ drawHeat(); updateStats();});
+// EXPORT
+function exportCSV() {
+  let csv = "Pitcher,Type,X,Y,Date\n";
+
+  for (let p in data) {
+    data[p].forEach(row => {
+      csv += `${p},${row.type},${row.x},${row.y},${row.date}\n`;
+    });
+  }
+
+  let blob = new Blob([csv], {type:'text/csv'});
+  let a = document.createElement("a");
+  a.href = URL.createObjectURL(blob);
+  a.download = "bullpen.csv";
+  a.click();
+}
+
+// LISTENERS
 document.getElementById("viewMode").addEventListener("change", drawHeat);
 document.getElementById("pitchType").addEventListener("change", drawHeat);
+document.getElementById("pitcherSelect").addEventListener("change", ()=>{
+  drawHeat();
+  updateStats();
+  drawChart();
+});
 </script>
+
 </body>
 </html>
